fix(option): ellipses are not displayed when text overflows (#1254)

--- a/packages/varlet-ui/src/option/option.less
+++ b/packages/varlet-ui/src/option/option.less
@@ -28,8 +28,6 @@
   }
 
   &__text {
-    display: flex;
-    align-items: center;
     font-size: var(--option-font-size);
   }
 
